{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 90,
  "lineage": "e91cca6e-df0c-4a20-1a7b-1fb9abaa92db",
  "resources": [
    {
      "module": "module.ec2_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "firsttime",
      "provider": "module.ec2_1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:509399635098:instance/i-0e7597d9641b19541",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSMInstanceProfile",
            "id": "i-0e7597d9641b19541",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-ec2-key-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0413d929e0ff777cb",
            "private_dns": "ip-10-0-3-7.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0511a3df69b23a130",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0195490548d656022"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da418e58f0c51225",
            "tags": {
              "Name": "TF-Private-EC2"
            },
            "tags_all": {
              "Name": "TF-Private-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0195490548d656022"
            ]
          },
          "dependencies": [
            "module.ec2_1.aws_security_group.ssh-access",
            "module.vpc1.aws_subnet.private_subnets",
            "module.vpc1.aws_subnet.public_subnets",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-access",
      "provider": "module.ec2_1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:security-group/sg-0195490548d656022",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0195490548d656022",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssh-access",
            "name_prefix": "",
            "owner_id": "509399635098",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d9a662b041418d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "firsttime",
      "provider": "module.ec2_2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:509399635098:instance/i-0486b15d2cf3d26cf",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSMInstanceProfile",
            "id": "i-0486b15d2cf3d26cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-ec2-key-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0786378c9ddd42a87",
            "private_dns": "ip-10-1-3-114.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a2a931fd7ecfe281",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0636560d6a237a95a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042865a795537eddb",
            "tags": {
              "Name": "TF-Private-EC2"
            },
            "tags_all": {
              "Name": "TF-Private-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0636560d6a237a95a"
            ]
          },
          "dependencies": [
            "module.ec2_2.aws_security_group.ssh-access",
            "module.vpc2.aws_subnet.private_subnets",
            "module.vpc2.aws_subnet.public_subnets",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-access",
      "provider": "module.ec2_2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:security-group/sg-0636560d6a237a95a",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0636560d6a237a95a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssh-access",
            "name_prefix": "",
            "owner_id": "509399635098",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08bcdd35efd551e8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01968e6719727a1e7",
            "arn": "arn:aws:ec2:eu-north-1:509399635098:elastic-ip/eipalloc-01968e6719727a1e7",
            "association_id": "eipassoc-0ce8659634f17d8ef",
            "domain": "vpc",
            "id": "eipalloc-01968e6719727a1e7",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-036dddafdfb24dbb1",
            "private_dns": "ip-10-0-1-117.eu-north-1.compute.internal",
            "private_ip": "10.0.1.117",
            "public_dns": "ec2-51-21-16-149.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.16.149",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:internet-gateway/igw-060f974bab79164fc",
            "id": "igw-060f974bab79164fc",
            "owner_id": "509399635098",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-03d9a662b041418d8"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01968e6719727a1e7",
            "association_id": "eipassoc-0ce8659634f17d8ef",
            "connectivity_type": "public",
            "id": "nat-0ba1d02542c53fc31",
            "network_interface_id": "eni-036dddafdfb24dbb1",
            "private_ip": "10.0.1.117",
            "public_ip": "51.21.16.149",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aae3fc249338485d",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip",
            "module.vpc1.aws_subnet.public_subnets",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:route-table/rtb-0d3e27392bf462390",
            "id": "rtb-0d3e27392bf462390",
            "owner_id": "509399635098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ba1d02542c53fc31",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d9a662b041418d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip",
            "module.vpc1.aws_nat_gateway.nat",
            "module.vpc1.aws_subnet.public_subnets",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:route-table/rtb-0511fe56f2b3bd3dd",
            "id": "rtb-0511fe56f2b3bd3dd",
            "owner_id": "509399635098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060f974bab79164fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d9a662b041418d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.igw",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019b6ec26552271a4",
            "route_table_id": "rtb-0d3e27392bf462390",
            "subnet_id": "subnet-0da418e58f0c51225"
          },
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip",
            "module.vpc1.aws_nat_gateway.nat",
            "module.vpc1.aws_route_table.private_rt",
            "module.vpc1.aws_subnet.private_subnets",
            "module.vpc1.aws_subnet.public_subnets",
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb5ca76bc5982ad2",
            "route_table_id": "rtb-0d3e27392bf462390",
            "subnet_id": "subnet-027926a276d3d3da0"
          },
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip",
            "module.vpc1.aws_nat_gateway.nat",
            "module.vpc1.aws_route_table.private_rt",
            "module.vpc1.aws_subnet.private_subnets",
            "module.vpc1.aws_subnet.public_subnets",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae8b97ddc4bc02d2",
            "route_table_id": "rtb-0511fe56f2b3bd3dd",
            "subnet_id": "subnet-0aae3fc249338485d"
          },
          "dependencies": [
            "module.vpc1.aws_internet_gateway.igw",
            "module.vpc1.aws_route_table.public_rt",
            "module.vpc1.aws_subnet.public_subnets",
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072579da7d8e6442d",
            "route_table_id": "rtb-0511fe56f2b3bd3dd",
            "subnet_id": "subnet-0ff815c0f151975ba"
          },
          "dependencies": [
            "module.vpc1.aws_internet_gateway.igw",
            "module.vpc1.aws_route_table.public_rt",
            "module.vpc1.aws_subnet.public_subnets",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:subnet/subnet-0da418e58f0c51225",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da418e58f0c51225",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399635098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-03d9a662b041418d8"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:subnet/subnet-027926a276d3d3da0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027926a276d3d3da0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399635098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-03d9a662b041418d8"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:subnet/subnet-0aae3fc249338485d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aae3fc249338485d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509399635098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-03d9a662b041418d8"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:subnet/subnet-0ff815c0f151975ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff815c0f151975ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509399635098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-03d9a662b041418d8"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:vpc/vpc-03d9a662b041418d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ecccc404d2cb791a",
            "default_route_table_id": "rtb-01bc03013e60c7444",
            "default_security_group_id": "sg-07c8e844a09ca201a",
            "dhcp_options_id": "dopt-0e6240ad5115c2f9f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d9a662b041418d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01bc03013e60c7444",
            "owner_id": "509399635098",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011a65f4fac7c3839",
            "arn": "arn:aws:ec2:eu-north-1:509399635098:elastic-ip/eipalloc-011a65f4fac7c3839",
            "association_id": "eipassoc-0d4153eaa50877994",
            "domain": "vpc",
            "id": "eipalloc-011a65f4fac7c3839",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-09118f272f02dc237",
            "private_dns": "ip-10-1-1-237.eu-north-1.compute.internal",
            "private_ip": "10.1.1.237",
            "public_dns": "ec2-51-21-215-228.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.215.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:internet-gateway/igw-006aac0f8e97adf56",
            "id": "igw-006aac0f8e97adf56",
            "owner_id": "509399635098",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-08bcdd35efd551e8a"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011a65f4fac7c3839",
            "association_id": "eipassoc-0d4153eaa50877994",
            "connectivity_type": "public",
            "id": "nat-09aa5a07f9d2847f4",
            "network_interface_id": "eni-09118f272f02dc237",
            "private_ip": "10.1.1.237",
            "public_ip": "51.21.215.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05869532a1e1eb111",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc2.aws_eip.nat_eip",
            "module.vpc2.aws_subnet.public_subnets",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:route-table/rtb-0bbde89cb3d260537",
            "id": "rtb-0bbde89cb3d260537",
            "owner_id": "509399635098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09aa5a07f9d2847f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bcdd35efd551e8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_eip.nat_eip",
            "module.vpc2.aws_nat_gateway.nat",
            "module.vpc2.aws_subnet.public_subnets",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:route-table/rtb-002541cd46afc45cf",
            "id": "rtb-002541cd46afc45cf",
            "owner_id": "509399635098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006aac0f8e97adf56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bcdd35efd551e8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_internet_gateway.igw",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016d22ff4c788c387",
            "route_table_id": "rtb-0bbde89cb3d260537",
            "subnet_id": "subnet-042865a795537eddb"
          },
          "dependencies": [
            "module.vpc2.aws_eip.nat_eip",
            "module.vpc2.aws_nat_gateway.nat",
            "module.vpc2.aws_route_table.private_rt",
            "module.vpc2.aws_subnet.private_subnets",
            "module.vpc2.aws_subnet.public_subnets",
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092f78160298bf2b4",
            "route_table_id": "rtb-0bbde89cb3d260537",
            "subnet_id": "subnet-0d9e8602b1f6aa7b7"
          },
          "dependencies": [
            "module.vpc2.aws_eip.nat_eip",
            "module.vpc2.aws_nat_gateway.nat",
            "module.vpc2.aws_route_table.private_rt",
            "module.vpc2.aws_subnet.private_subnets",
            "module.vpc2.aws_subnet.public_subnets",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c1d2e450ffbdf7e",
            "route_table_id": "rtb-002541cd46afc45cf",
            "subnet_id": "subnet-05869532a1e1eb111"
          },
          "dependencies": [
            "module.vpc2.aws_internet_gateway.igw",
            "module.vpc2.aws_route_table.public_rt",
            "module.vpc2.aws_subnet.public_subnets",
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0605b8a9c0d0566ed",
            "route_table_id": "rtb-002541cd46afc45cf",
            "subnet_id": "subnet-0f1b6127cd1693097"
          },
          "dependencies": [
            "module.vpc2.aws_internet_gateway.igw",
            "module.vpc2.aws_route_table.public_rt",
            "module.vpc2.aws_subnet.public_subnets",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:subnet/subnet-042865a795537eddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042865a795537eddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399635098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-08bcdd35efd551e8a"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:subnet/subnet-0d9e8602b1f6aa7b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9e8602b1f6aa7b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399635098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-08bcdd35efd551e8a"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:subnet/subnet-05869532a1e1eb111",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05869532a1e1eb111",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509399635098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-08bcdd35efd551e8a"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:subnet/subnet-0f1b6127cd1693097",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1b6127cd1693097",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509399635098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-08bcdd35efd551e8a"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:509399635098:vpc/vpc-08bcdd35efd551e8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ee7dd118fe0124e2",
            "default_route_table_id": "rtb-0ee9b2257ab4f3b58",
            "default_security_group_id": "sg-0fbf970d874351350",
            "dhcp_options_id": "dopt-0e6240ad5115c2f9f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08bcdd35efd551e8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee9b2257ab4f3b58",
            "owner_id": "509399635098",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc1_to_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d3e27392bf4623903322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d3e27392bf462390",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0134a66b244c4585c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_eip.nat_eip",
            "module.vpc1.aws_nat_gateway.nat",
            "module.vpc1.aws_route_table.private_rt",
            "module.vpc1.aws_subnet.public_subnets",
            "module.vpc1.aws_vpc.main",
            "module.vpc2.aws_vpc.main",
            "module.vpc_peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc2_to_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bbde89cb3d260537179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbde89cb3d260537",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0134a66b244c4585c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.main",
            "module.vpc2.aws_eip.nat_eip",
            "module.vpc2.aws_nat_gateway.nat",
            "module.vpc2.aws_route_table.private_rt",
            "module.vpc2.aws_subnet.public_subnets",
            "module.vpc2.aws_vpc.main",
            "module.vpc_peering.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0134a66b244c4585c",
            "peer_owner_id": "509399635098",
            "peer_region": "eu-north-1",
            "peer_vpc_id": "vpc-08bcdd35efd551e8a",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc1-to-vpc2-peering"
            },
            "tags_all": {
              "Name": "vpc1-to-vpc2-peering"
            },
            "vpc_id": "vpc-03d9a662b041418d8"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}